--- a/module2-solution/css/styles.css
+++ b/module2-solution/css/styles.css
@@ -39,7 +39,7 @@ h1 {
 .sec {
 	float: left;
 	border: 1px solid black;
-	margin: 10px;
+	margin: 1%;
 	background-color: grey;
 }
 
@@ -52,18 +52,84 @@ h1 {
 
 /********** Large devices only **********/
 @media (min-width: 992px) {
-	.sec {
-		width: 31%;
+	.col-lg-1 {
+		width: 8.33%;
+	}
+	.col-lg-2 {
+		width: 16.66%;
+	}
+	.col-lg-3 {
+		width: 25%;
+	}
+	/* reduced for 1% left-right margin */
+	.col-lg-4 {
+		width: 31.33%;
+	}
+	.col-lg-5 {
+		width: 41.66%;
+	}
+	.col-lg-6 {
+		width: 50%;
+	}
+	.col-lg-7 {
+		width: 58.33%;
+	}
+	.col-lg-8 {
+		width: 66.66%;
+	}
+	.col-lg-9 {
+		width: 74.99%;
+	}
+	.col-lg-10 {
+		width: 83.33%;
+	}
+	.col-lg-11 {
+		width: 91.66%;
+	}
+	.col-lg-12 {
+		width: 100%;
 	}
 }
 
 /********** Medium devices only **********/
 @media (min-width: 768px) and (max-width: 991px) {
-	.sec {
-		width: 47%;
+	.col-md-1 {
+		width: 8.33%;
 	}
-	#sec3 {
-		width: auto;
+	.col-md-2 {
+		width: 16.66%;
+	}
+	.col-md-3 {
+		width: 25%;
+	}
+	.col-md-4 {
+		width: 33.33%;
+	}
+	.col-md-5 {
+		width: 41.66%;
+	}
+	/* reduced for 1% left-right margin */
+	.col-md-6 {
+		width: 48%;
+	}
+	.col-md-7 {
+		width: 58.33%;
+	}
+	.col-md-8 {
+		width: 66.66%;
+	}
+	.col-md-9 {
+		width: 74.99%;
+	}
+	.col-md-10 {
+		width: 83.33%;
+	}
+	.col-md-11 {
+		width: 91.66%;
+	}
+	/* reduced for 1% left-right margin */
+	.col-md-12 {
+		width: 98%;
 	}
 }
 
